Update Gradle 7.3 & OpenJDK Java 17